--- a/cardanimation/index.html
+++ b/cardanimation/index.html
@@ -121,7 +121,7 @@
         <div class="card-front_inside">
           <br> <br> <br>
           <div class="polaroid">
-            <div class="img" style="background-image: url('joshua-rawson-harris-dN67hPE5KWY-unsplash.jpg')"></div>
+            <div class="img" style="background-image: url('her image.jpg')"></div>
           </div>
           <div
             data-balloon="I wanted to do something different than ppt's/collages this year and I knew I had to do something creative, so here is a polaroid photo effect (took me a ton of code/brainstorming to achieve that!) 😂"
