--- a/cardanimation/index.html
+++ b/cardanimation/index.html
@@ -12,7 +12,7 @@
   <!-- partial:index.partial.html -->
   <!DOCTYPE html>
   <html lang="en">
-<button id="animatedBtn" class="hidden-btn">Click Me</button>
+<button id="animatedBtn" class="hidden-btn">Flowers💐</button>
 
   <head>
     <meta charset="UTF-8">
