--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
         <u>Made With Love <i class="em-svg em-heart"></i></b><b> By john</u>
       </p>
 </div>
-
+<!-- ========= Button under the card (outside the card) ========= -->
+<div class="card-bottom-btn">
+  <button class="premium-btn" onclick="window.location.href='https://example.com'">
+    Click Me
+  </button>
+</div>
       </div>
       <div id="card-front">
         <div class="wrap">
