--- a/index.html
+++ b/index.html
@@ -44,14 +44,11 @@
     <p class="animated infinite wobble"><b><u>Happy Birthday </b></u></p>
     <center>
       <p>
-        Hey, I don't have much words to say on the occasion and neither did I plan some huge surprises! I just wanted to
-        wish you a sweet and cherishing birthday. And since I wanted to make it a little special, I did what I do best —
-        Code. &nbsp;<i class="em-svg em-blush"></i>
+       Hello👋, first of all Happy birthday majhya Jaan la 🥳 Love you sooo much Dishuuu💋 I want nothing more than to see you happy with all your wishes fulfilled.
+       Wishing you lots of happiness, good health and success. May your day be full of fun and smiles. Enjoy your special day. &nbsp;<i class="em-svg em-blush"></i>
       </p>
       <p>
-        You've been an incredible support system, a beautiful soul, and someone who truly lights up my world. I’ve learned
-        so much from you — about life, love, and just being a better version of myself. I could go on about what you mean
-        to me, but due to code constraints – I won’t! (Hahaha). Wishing you a very happy birthday. Cheers!
+       Thank you Pilluuu, itk prem karya saathi aani mala smajun ghenya saathi. 
       </p>
       <p class="signed">
         <u>Made With Love <i class="em-svg em-heart"></i></b><b> By john</u>
@@ -128,7 +125,7 @@
             <div class="img" style="background-image: url('myphoto.jpg')"></div>
           </div>
           <div
-            data-balloon="I wanted to do something different than ppt's/collages this year and I knew I had to do something creative, so here is a polaroid photo effect (took me a ton of code/brainstorming to achieve that!) 😂"
+            data-balloon="I wanted to make your birthday special, so I tried this. Hope you like it "
             data-balloon-length="large" data-balloon-pos="up" data-balloon-visible></div>
         </div>
         <div class="shadow"></div>
