--- a/index.html
+++ b/index.html
@@ -44,14 +44,17 @@
     <p class="animated infinite wobble"><b><u>Happy Birthday </b></u></p>
     <center>
       <p>
-       Hello👋, first of all Happy birthday majhya Jaan la 🥳 Love you sooo much Dishuuu💋 I want nothing more than to see you happy with all your wishes fulfilled.
-       Wishing you lots of happiness, good health and success. May your day be full of fun and smiles. Enjoy your special day. &nbsp;<i class="em-svg em-blush"></i>
+       Hello Babeee, first of all Happy birthday majhya Jaan la 🥳 Love you sooo much Dishuuu💋 I want nothing more than to see you happy with all your wishes fulfilled.🥹
+       Wishing you lots of happiness, good health and success.🫶 May your day be full of fun and smiles. Enjoy your special day. &nbsp;<i class="em-svg em-blush"></i>
       </p>
       <p>
-       Thank you Pilluuu, itk prem karya saathi aani mala smajun ghenya saathi. 
+       Thank you Pilluuu, vichar navta kela ki mala koni bhetan je itka prem karan, kalji ghein
+      aani samjun ghein 😘 Mahiti ye ki khup pareshan karto mi pn tula (pn mala aawdt yaar tu paresh houn majhyavar chidti tar 😚)
+      Mi itk pareshan karto, aikat nai, tari pn mala dur nai kel 🥺 Sorry, pn kadhi kadhi watt ki tujya sarkh prem karn mala nai jamnar pn mi 
+        try karto tula khush thevayla. Happy b'day Baykooo, Love you 3000. Ummmmmaaaaa 😚💋
       </p>
       <p class="signed">
-        <u>Made With Love <i class="em-svg em-heart"></i></b><b> By john</u>
+        <u>Made With Love <i class="em-svg em-heart"></i></b><b> By Kalluuu</u>
       </p>
 </div>
 <!-- ========= Button under the card (outside the card) ========= -->
