--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
        Wishing you lots of happiness, good health and success.🫶 May your day be full of fun and smiles. Enjoy your special day. &nbsp;<i class="em-svg em-blush"></i>
       </p>
       <p>
-       Thank you Pilluuu, vichar navta kela ki mala koni bhetan je itka prem karan, kalji ghein
-      aani samjun ghein 😘 Mahiti ye ki khup pareshan karto mi pn tula (pn mala aawdt yaar tu paresh houn majhyavar chidti tar 😚)
-      Mi itk pareshan karto, aikat nai, tari pn mala dur nai kel 🥺 Sorry, pn kadhi kadhi watt ki tujya sarkh prem karn mala nai jamnar pn mi 
-        try karto tula khush thevayla. Happy b'day Baykooo, Love you 3000. Ummmmmaaaaa 😚💋
+      Thank you Buttuuu, nala itk special banavnya saathi aani itk orem karnya saathi. Mi itk pareshan karto, aikat nai tari pn mala sudharavl, sodl nahi🥺 Tujhi barobari nai karu shakat mi Pillleee🫶 Thabk you sooo much 😭 (kiti pn mhanlo tari kami aahe)  Happy b'day Baykooo, Love you 3000. Ummmmmaaaaa 😚💋
       </p>
       <p class="signed">
         <u>Made With Love <i class="em-svg em-heart"></i></b><b> By Kalluuu</u>
