--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        Wishing you lots of happiness, good health and success.🫶 May your day be full of fun and smiles. Enjoy your special day. &nbsp;<i class="em-svg em-blush"></i>
       </p>
       <p>
-      Thank you Buttuuu, nala itk special banavnya saathi aani itk orem karnya saathi. Mi itk pareshan karto, aikat nai tari pn mala sudharavl, sodl nahi🥺 Tujhi barobari nai karu shakat mi Pillleee🫶 Thabk you sooo much 😭 (kiti pn mhanlo tari kami aahe)  Happy b'day Baykooo, Love you 3000. Ummmmmaaaaa 😚💋
+      Thank you Buttuuu, mala itk special banavnya saathi aani itk prem karnya saathi. Mi itk pareshan karto, aikat nai tari pn mala sudharavl, sodl nahi🥺 Tujhi barobari nai karu shakat mi Pillleee🫶 Thank you sooo much 😭 (kiti pn mhanlo tari kami aahe)  Happy b'day Baykooo, Love you 3000. Ummmmmaaaaa 😚💋
       </p>
       <p class="signed">
         <u>Made With Love <i class="em-svg em-heart"></i></b><b> By Kalluuu</u>
